--- a/book/readFrontend/templates/common/readSetter.ejs
+++ b/book/readFrontend/templates/common/readSetter.ejs
@@ -1,12 +1,12 @@
 <div class="Readsetter">
     <div class="box">
-        <button id="lightDefault" class="lightbg on">默认</button>
-        <button id="lightHuyan" class="lightbg">护眼</button>
-        <button id="lightYejian" class="lightbg">夜间</button>
+        <button id="lightDefault" class="lightbg" onclick="readSet(this,'light','lightDefault')">默认</button>
+        <button id="lightHuyan" class="lightbg" onclick="readSet(this,'light','lightHuyan')">护眼</button>
+        <button id="lightYejian" class="lightbg" onclick="readSet(this,'light','lightYejian')">夜间</button>
     </div>
     <div class="box">
-        <button id="fontBig" class="sizebg on">大</button>
-        <button id="fontMiddle" class="sizebg">中</button>
-        <button id="fontSmall" class="sizebg">小</button>
+        <button id="fontBig" class="sizebg" onclick="readSet(this,'fontSize','fontBig')">大</button>
+        <button id="fontMiddle" class="sizebg" onclick="readSet(this,'fontSize','fontMiddle')">中</button>
+        <button id="fontSmall" class="sizebg" onclick="readSet(this,'fontSize','fontSmall')">小</button>
     </div>
 </div>
