--- a/book/readFrontend/templates/common/footer.ejs
+++ b/book/readFrontend/templates/common/footer.ejs
@@ -6,8 +6,8 @@
     <p class="version channel">
         <a href="/">首页</a>
         <a href="https://www.35xs.co">电脑版</a>
-        <a href="/user/">我的书架</a>
-        <a href="/tempbook">阅读记录</a>
+        <a href="/bookshelf">我的书架</a>
+        <a href="/history">阅读记录</a>
     </p>
     <p>本站所收录作品均是来源于网友上传,与本站立场无关,如有侵犯版权或涉黄问题,请来信告知,本站立即予以删除。 邮箱:35xsmail@gmail.com</p>
 </footer>
