--- a/book/readFrontend/templates/common/footer.ejs
+++ b/book/readFrontend/templates/common/footer.ejs
@@ -11,6 +11,6 @@
     </p>
     <p>本站所收录作品均是来源于网友上传,与本站立场无关,如有侵犯版权或涉黄问题,请来信告知,本站立即予以删除。 邮箱:35xsmail@gmail.com</p>
 </footer>
-<script language="javascript" type="text/javascript" src="//cdn.jsdelivr.net/npm/zepto@1.2.0/dist/zepto.min.js"></script>
+<script language="javascript" type="text/javascript" src="//cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
 <script language="javascript" type="text/javascript" src="/static/src/js/core.js"></script>
 <script language="javascript" type="text/javascript" src="/static/src/js/common.js"></script>
