--- a/book/readFrontend/templates/common/top.ejs
+++ b/book/readFrontend/templates/common/top.ejs
@@ -2,19 +2,11 @@
 <html>
 
 <head>
-    <meta http-equiv="Content-Type" content="application/xhtml+xml;charset=utf-8" />
-    <title>
-        <%= title%>
-    </title>
+    <title><%= title%></title>
     <meta name="keywords" content="<%= keywords%>" />
     <meta name="description" content="<%= description%>" />
+    <meta http-equiv="Content-Type" content="application/xhtml+xml;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta http-equiv="Cache-Control" content="no-transform" />
-    <meta http-equiv="Cache-Control" content="no-siteapp" />
-    <!-- <link rel="stylesheet" href="/static/src/font-awesome/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="/static/src/css/common.css" />
 </head>
 
