--- a/book/readFrontend/templates/home.ejs
+++ b/book/readFrontend/templates/home.ejs
@@ -44,9 +44,7 @@
         <a class="common_sale" href="/book/<%= book.bookId%>/">
             <!-- <span class="sort">
                 <%= '['+book.categoryName+']'%></span> -->
-            <span class="title">
-                <%= book.title%></span><span class="writer">（
-                <%= book.writer%>）</span>
+            <span class="title"><%= book.title%></span><span class="writer">（<%= book.writer%>）</span>
         </a>
         <% }); %>
     </div>
