--- a/book/readFrontend/static/src/css/login.css
+++ b/book/readFrontend/static/src/css/login.css
@@ -73,7 +73,7 @@
     line-height: 25px;
     margin: 30px 0px 10px 0px;
     padding: 10px;
-    position: relative;
+    /*position: relative;*/
 }
 
 .tip_box h2 {
@@ -81,8 +81,12 @@
     color: #60A1BB;
     font-size: 16px;
     padding: 0 5px;
-    position: absolute;
-    top: -16px;
+    margin: 0 0 5px 0;
+    /*position: absolute;*/
+    /*top: -16px;*/
+}
+.tip_box p {
+    margin: 0;
 }
 
 .text_register {
