--- a/book/readFrontend/templates/common/pageHeader.ejs
+++ b/book/readFrontend/templates/common/pageHeader.ejs
@@ -2,8 +2,10 @@
     <a href="javascript:history.go(-1);" class="iconback">
         <img alt="返回" src="/static/src/images/header-back.png">
     </a>
-    <%= pageTitle %>
     <a href="/" class="iconhome">
         <img alt="首页" src="/static/src/images/header-backhome.png">
     </a>
+    <p class="channelHeaderTitle">
+        <%= pageTitle %>
+    </p>
 </header>
