--- a/book/readFrontend/templates/common/top.ejs
+++ b/book/readFrontend/templates/common/top.ejs
@@ -2,11 +2,14 @@
 <html>
 
 <head>
-    <title><%= title%></title>
+    <title>
+        <%= title%>
+    </title>
     <meta name="keywords" content="<%= keywords%>" />
     <meta name="description" content="<%= description%>" />
     <meta http-equiv="Content-Type" content="application/xhtml+xml;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/static/src/css/common.css" />
 </head>
 
