--- a/book/readFrontend/templates/home.ejs
+++ b/book/readFrontend/templates/home.ejs
@@ -36,8 +36,8 @@
 <% otherBlocks.forEach(function(block){ %>
 <div class="tabArea bannerLink">
     <div class="tab-nav">
-        <h2><a class="tab-nav-cur">
-                <%= block.name%></a></h2>
+        <a class="tab-nav-cur">
+                <%= block.name%></a>
     </div>
     <div class="slide">
         <% block.books.forEach(function(book){ %>
