--- a/book/readFrontend/static/src/css/common.css
+++ b/book/readFrontend/static/src/css/common.css
@@ -2,23 +2,33 @@
     margin: 0;
     padding: 0;
 }
+
 body {
     color: #4c6978;
     font: 14px 'microsoft yahei', Arial, Helvetica, sans-serif;
 }
+
 img {
     border: none;
 }
+
 a {
     color: #4c6978;
     text-decoration: none;
     border: none;
     cursor: pointer;
 }
+
 a:hover {
     text-decoration: none;
 }
-h1, h2, h3, h4, h5, h6 {
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-size: 16px;
     font-weight: normal;
 }
@@ -26,6 +36,7 @@ h1, h2, h3, h4, h5, h6 {
 .clearfix {
     display: block;
 }
+
 .clearfix:after {
     clear: both;
     content: "";
@@ -41,6 +52,7 @@ footer {
     position: relative;
     font-size: 14px;
 }
+
 footer .backTop img {
     position: absolute;
     right: 25px;
@@ -48,6 +60,7 @@ footer .backTop img {
     cursor: pointer;
     width: 31px;
 }
+
 footer .channel a {
     margin: 0 5px;
     color: #68aac2;
@@ -60,6 +73,7 @@ header {
     line-height: 54px;
     border-bottom: 1px #4399b8 solid;
 }
+
 header span.logo {
     float: left;
     width: 142px;
@@ -68,6 +82,7 @@ header span.logo {
     color: #fff;
     padding-left: 12px;
 }
+
 /*header a.login {
     width: 25px;
     height: 54px;
@@ -92,11 +107,13 @@ header span.logo {
     padding: 0 10px;
     border-top: 1px #5db3d2 solid;
 }
+
 .smallNav a {
     color: #fff;
     float: left;
     width: 16%;
 }
+
 .smallNav .sel {
     font-weight: bold;
 }
@@ -110,20 +127,24 @@ header span.logo {
     line-height: 40px;
     overflow: hidden;
 }
+
 .tab-nav a {
     color: #fff;
     cursor: pointer;
 }
+
 .tab-nav .tab-nav-more {
     float: right;
     margin-right: 10px;
 }
+
 .rankArea .tab-nav {
     font-size: 16px;
     background: #F6F6F6;
     border-top: 1px solid #D7D7D7;
     border-bottom: 1px solid #D7D7D7;
 }
+
 .rankArea .tab-nav a {
     color: #666;
 }
@@ -138,6 +159,7 @@ header span.logo {
     background-color: #68aac2;
     overflow: hidden;
 }
+
 .channelHeader .channelHeaderTitle {
     overflow: hidden;
     margin: 0;
@@ -145,15 +167,19 @@ header span.logo {
     white-space: nowrap;
     padding: 0 15px;
 }
+
 .channelHeader .iconback {
     float: left;
     height: 100%;
 }
+
 .channelHeader .iconhome {
     float: right;
     height: 100%;
 }
-.channelHeader .iconback img, .channelHeader .iconhome img {
+
+.channelHeader .iconback img,
+.channelHeader .iconhome img {
     height: 20px;
     margin: 13px 8px;
 }
@@ -164,6 +190,7 @@ header span.logo {
     position: relative;
     border: 1px #c0deea solid;
 }
+
 .searchForm_input {
     display: block;
     border: none;
@@ -178,6 +205,7 @@ header span.logo {
     padding-right: 60px;
 
 }
+
 .searchForm_btn {
     position: absolute;
     right: 0;
@@ -202,32 +230,38 @@ header span.logo {
     background: #edfaff;
     border: none;
 }
+
 .hot_sale .bookimg {
     float: left;
     width: 110px;
     height: 120px;
     text-align: center;
 }
+
 .hot_sale .bookimg img {
     border: 1px #b4dae8 solid;
     width: 90px;
     height: 120px;
 }
+
 .hot_sale .bookinfo {
     overflow: hidden;
 }
+
 .hot_sale .title {
     color: #375868;
     font-size: 16px;
-    height: 20px;
+    /*height: 20px;*/
     overflow: hidden;
 }
+
 .hot_sale .author {
     font-size: 14px;
     color: #7f9ba8;
-    height: 24px;
-    line-height: 24px;
+    /*height: 24px;*/
+    /*line-height: 24px;*/
 }
+
 .hot_sale .review {
     font-size: 14px;
     color: #7f9ba8;
@@ -236,8 +270,9 @@ header span.logo {
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 4;
+    -webkit-line-clamp: 3;
 }
+
 .common_sale {
     display: block;
     font-size: 14px;
@@ -246,6 +281,7 @@ header span.logo {
     overflow: hidden;
     white-space: nowrap;
 }
+
 .common_sale .num {
     display: inline-block;
     background: #B0B0B0;
@@ -256,15 +292,20 @@ header span.logo {
     line-height: 20px;
     border-radius: 50%;
 }
+
 .common_sale .num.top {
     background: #FA744E;
 }
-.common_sale .sort, .common_sale .writer {
+
+.common_sale .sort,
+.common_sale .writer {
     color: #777;
 }
+
 .rankArea .common_sale {
     border-bottom: 1px dashed #CCC;
 }
+
 .rankArea .common_sale .writer {
     float: right;
 }
@@ -274,6 +315,7 @@ header span.logo {
     overflow: hidden;
     margin: 10px 4px;
 }
+
 .sortChannel_nav li {
     list-style: none;
     float: left;
@@ -282,6 +324,7 @@ header span.logo {
     box-sizing: border-box;
     padding: 4px;
 }
+
 .sortChannel_nav a {
     display: block;
     text-align: center;
@@ -291,6 +334,7 @@ header span.logo {
     border-radius: 1px;
     background: #efefef;
 }
+
 /*不带边框样式*/
 /*.sortChannel_nav li {
     list-style: none;
@@ -307,6 +351,7 @@ header span.logo {
     background: #4baacd;
     color: #fff;
 }
+
 .areaTitle {
     font-weight: 500;
     line-height: 40px;
@@ -317,10 +362,12 @@ header span.logo {
     padding: 0 10px;
     overflow: hidden;
 }
+
 .areaTitle .itemDel {
     color: red;
     float: right;
 }
+
 .searchArea .common_sale {
     border-bottom: 1px solid #ddd;
 }
@@ -334,9 +381,12 @@ header span.logo {
     overflow: hidden;
     position: relative;
 }
-.historyArea .historyItem .itemNum, .historyArea .historyItem .itemContent {
+
+.historyArea .historyItem .itemNum,
+.historyArea .historyItem .itemContent {
     float: left;
 }
+
 .historyArea .historyItem .itemNum {
     height: 20px;
     width: 20px;
@@ -347,6 +397,7 @@ header span.logo {
     margin-right: 8px;
     line-height: 20px;
 }
+
 .historyArea .historyItem .itemDel {
     position: absolute;
     top: 8px;
@@ -356,16 +407,20 @@ header span.logo {
     padding: 2px 5px;
     border-radius: 2px;
 }
+
 .historyArea .historyItem .title {
     font-weight: bold;
 }
+
 .historyArea .historyItem .otherInfo {
     font-size: 12px;
     color: #7f9ba8;
 }
+
 .historyArea .historyItem .otherInfo p {
     margin: 4px 0;
 }
+
 .historyArea .historyItem .otherInfo p:last-child {
     margin: 0;
 }
@@ -378,16 +433,20 @@ header span.logo {
     line-height: 40px;
     text-align: center;
 }
+
 .page a {
     color: #fff;
     margin: 0 4px;
 }
+
 .page a.disabled {
     color: #ddd;
 }
+
 .page a.disabled {
     color: #c5d7df;
 }
+
 .page .pageSelecter {
     width: 100px;
     height: 24px;
@@ -407,6 +466,7 @@ header span.logo {
     margin: 10px 0;
     text-align: center;
 }
+
 .synopsisArea a {
     display: inline-block;
     padding: 5px 18px 5px 18px;
@@ -417,23 +477,33 @@ header span.logo {
     border-radius: 5px;
     /*margin: 0 3px;*/
 }
+
 .synopsisArea .btn_toBookShelf {
     background: #f0962a;
     box-shadow: 0 2px 1px #d88726 inset;
 }
+
 .synopsisArea .btn_toMyBook {
     background: #658fbd;
     box-shadow: 0 2px 1px #5b80aa inset;
 }
+
 .book_detail_review {
-    margin: 10px;
+    padding: 10px;
     line-height: 23px;
+    text-align: center;
+    /*解决uc浏览器下文本莫名其妙换行的问题*/
+    text-align-last: left;
+    word-break: break-all;
 }
+
 .chapter {
     display: block;
     padding: 7px 10px;
     line-height: 40px;
     font-size: 16px;
-    /* white-space: nowrap; */
     line-height: 26px;
+    text-align: center;
+    text-align-last: left;
+    word-break: break-all;
 }
